--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FDFDFD"
+        android:background="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -18,17 +18,38 @@
 
 
         <ImageView
+            android:id="@+id/blobView2"
+            android:layout_width="288dp"
+            android:layout_height="255dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="176dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/homeView"
+            app:srcCompat="@drawable/blob_2" />
+
+        <ImageView
+            android:id="@+id/blobView3"
+            android:layout_width="320dp"
+            android:layout_height="300dp"
+            android:layout_marginTop="60dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/blob_3" />
+
+        <ImageView
             android:id="@+id/homeView"
-            android:layout_width="408dp"
-            android:layout_height="384dp"
+            android:layout_width="414dp"
+            android:layout_height="385dp"
+            android:layout_margin="10dp"
             android:background="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.454"
+            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/home" />
+            app:srcCompat="@drawable/homescreen" />
 
         <TextView
             android:id="@+id/homeTextView"
@@ -51,13 +72,24 @@
             android:layout_width="170dp"
             android:layout_height="55dp"
             android:backgroundTint="#648E66"
-            android:text="Get Started"
+            android:text="Start Growing"
+            android:textSize="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/homeView"
-            app:layout_constraintVertical_bias="0.615" />
+            app:layout_constraintVertical_bias="0.996" />
+
+        <ImageView
+            android:id="@+id/blobView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/blob_1" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
