--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -4,29 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:backgroundTint="#FFFFFF"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".MarketplaceActivity">
-
-    <ImageView
-        android:id="@+id/marketplaceRoof"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:adjustViewBounds="true"
-        android:contentDescription="Marketplace Roof"
-        android:scaleType="fitCenter"
-        android:src="@drawable/store" />
+    tools:context=".InventoryActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Inventory"
+        android:textSize="24sp"
+        android:textStyle="bold"
         android:layout_gravity="center_horizontal"
-        android:paddingBottom="15dp"
-        android:text="Marketplace"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
+        android:paddingBottom="16dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
@@ -34,7 +23,6 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:padding="8dp"
+        app:spanCount="2"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />
-
 </LinearLayout>
-
