--- a/app/src/main/res/drawable/ic_chat.xml
+++ b/app/src/main/res/drawable/ic_chat.xml
@@ -5,7 +5,7 @@
     android:viewportHeight="24">
   <path
       android:pathData="M12,22C17.523,22 22,17.523 22,12C22,6.477 17.523,2 12,2C6.477,2 2,6.477 2,12C2,13.6 2.376,15.112 3.043,16.452C3.221,16.809 3.28,17.216 3.177,17.601L2.582,19.827C2.323,20.793 3.207,21.677 4.173,21.419L6.399,20.823C6.784,20.72 7.191,20.779 7.548,20.956C8.888,21.624 10.4,22 12,22Z"
-      android:fillColor="#1C274C"/>
+      android:fillColor="#000000"/>
   <path
       android:pathData="M15,12C15,12.552 15.448,13 16,13C16.552,13 17,12.552 17,12C17,11.448 16.552,11 16,11C15.448,11 15,11.448 15,12Z"
       android:fillColor="#ffffff"/>
