Implemented expandable inventory categories with fallback "No items" message. Categories are now expandable on click to show nested RecyclerViews. Implemented nav menu in the marketplace. Fixed purchasing item logic to grab imageId. Cleaned up adapter logic for toggling expansion and rendering icons by category.

--- a/app/src/main/res/layout/marketplace_item.xml
+++ b/app/src/main/res/layout/marketplace_item.xml
@@ -8,13 +8,13 @@
    >
 
     <ImageView
-        android:id="@+id/itemImage"
+        android:id="@+id/inventoryItemIcon"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:scaleType="centerCrop" />
 
     <TextView
-        android:id="@+id/itemName"
+        android:id="@+id/inventoryItemName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="16sp"
