--- a/app/src/main/res/layout/item_inventory_category.xml
+++ b/app/src/main/res/layout/item_inventory_category.xml
@@ -2,8 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="8dp"
+    android:elevation="4dp"
     android:orientation="vertical"
     android:padding="12dp">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,8 +20,8 @@
 
         <ImageView
             android:id="@+id/categoryIcon"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_marginEnd="8dp"
             android:src="@drawable/default_image" />
 
@@ -24,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:textSize="18sp"
+            android:textSize="15sp"
             android:textColor="@android:color/black" />
     </LinearLayout>
 
@@ -40,11 +47,11 @@
         android:id="@+id/noItemsMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="No items in this category"
+        android:text="You have no items in this category."
         android:textColor="@android:color/darker_gray"
         android:visibility="gone"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"/>
-
+    </LinearLayout>
 
 </LinearLayout>
