--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -66,8 +66,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
+            android:hint="Enter username"
             android:inputType="text"
-            android:text="Enter username"
             android:textColor="#638D65"
             android:textSize="20sp"
             android:textStyle="italic"
@@ -82,6 +82,7 @@
             android:layout_marginTop="10dp"
             android:backgroundTint="#CFD9C6"
             android:text="Create New User"
+            android:textColor="#000000"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
