--- a/app/src/main/res/layout/item_inventory_category.xml
+++ b/app/src/main/res/layout/item_inventory_category.xml
@@ -12,26 +12,27 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:paddingBottom="4dp">
 
         <ImageView
             android:id="@+id/categoryIcon"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginEnd="8dp"
             android:src="@drawable/default_image" />
-
 
             <TextView
             android:id="@+id/categoryTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="Category"
             android:textStyle="bold"
-            android:textSize="15sp"
+            android:textSize="16sp"
             android:textColor="@android:color/black" />
     </LinearLayout>
 
@@ -39,8 +40,8 @@
         android:id="@+id/itemsRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="8dp"
         android:nestedScrollingEnabled="false"
+        android:paddingTop="8dp"
         android:overScrollMode="never" />
 
     <TextView
