Add buttom bottom to improve user experience

--- a/app/src/main/res/layout/dialog_add_habit.xml
+++ b/app/src/main/res/layout/dialog_add_habit.xml
@@ -537,5 +537,31 @@
                 </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
+        <!-- Bottom Buttons -->
+        <LinearLayout
+            android:id="@+id/bottomButtonBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="12dp"
+            android:orientation="horizontal"
+            android:gravity="end">
+
+            <Button
+                android:id="@+id/btnBottomCancel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cancel"
+                android:backgroundTint="#D3D3D3"
+                android:textColor="@android:color/black"
+                android:layout_marginEnd="12dp" />
+
+            <Button
+                android:id="@+id/btnBottomSave"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Save"
+                android:backgroundTint="#679273"
+                android:textColor="@android:color/white" />
+        </LinearLayout>
     </LinearLayout>
 </ScrollView>
