Hide upload photo feature now as diprecate

--- a/app/src/main/res/layout/dialog_add_habit.xml
+++ b/app/src/main/res/layout/dialog_add_habit.xml
@@ -183,6 +183,7 @@
 
                     <Button
                         android:id="@+id/btnUploadIcon"
+                        android:visibility="gone"
                         android:backgroundTint="#679273"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
