--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -380,15 +380,16 @@ app:layout_constraintStart_toStartOf="parent">
 </com.google.android.material.bottomappbar.BottomAppBar>
 
 
-<com.google.android.material.floatingactionbutton.FloatingActionButton
-    android:id="@+id/fab"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:backgroundTint="#679273"
-    android:src="@drawable/baseline_add_24"
-    app:layout_anchor="@id/bottomAppBar"
-    app:maxImageSize="40dp"
-    app:shapeAppearanceOverlay="@style/icon_rounded" />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/gardenButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:tint="@android:color/white"
+        android:backgroundTint="#679273"
+        android:src="@drawable/garden"
+        app:layout_anchor="@id/bottomAppBar"
+        app:maxImageSize="40dp"
+        app:shapeAppearanceOverlay="@style/icon_rounded" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
