--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -68,11 +68,12 @@
 
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab"
+            android:id="@+id/gardenButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:tint="@android:color/white"
             android:backgroundTint="#679273"
-            android:src="@drawable/baseline_add_24"
+            android:src="@drawable/garden"
             app:layout_anchor="@id/bottomAppBar"
             app:maxImageSize="40dp"
             app:shapeAppearanceOverlay="@style/icon_rounded" />
