--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,21 +40,22 @@
 
         <ImageView
             android:id="@+id/homeView"
-            android:layout_width="414dp"
-            android:layout_height="385dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:layout_margin="10dp"
             android:background="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintHorizontal_bias=".5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/homescreen" />
 
         <TextView
             android:id="@+id/homeTextView"
-            android:layout_width="265dp"
-            android:layout_height="98dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:fontFamily="sans-serif-medium"
             android:text="Grow habits, grow your garden, grow yourself!"
             android:textAlignment="center"
@@ -62,15 +63,16 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/startButton"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/homeView"
-            app:layout_constraintVertical_bias="0.395" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.971" />
 
         <Button
             android:id="@+id/startButton"
             android:layout_width="170dp"
             android:layout_height="55dp"
+            android:layout_marginBottom="8dp"
             android:backgroundTint="#648E66"
             android:text="Start Growing"
             android:textSize="16dp"
