--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -18,61 +18,64 @@
 
         <ImageView
             android:id="@+id/homeView"
-            android:layout_width="414dp"
-            android:layout_height="385dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:layout_margin="10dp"
             android:background="#FFFFFF"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/registerTextView"
+            app:layout_constraintDimensionRatio="h,1:1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias=".5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.104"
+            app:layout_constraintVertical_chainStyle="packed"
             app:srcCompat="@drawable/homescreen" />
 
         <TextView
-            android:id="@+id/loginTextView"
-            android:layout_width="265dp"
-            android:layout_height="98dp"
+            android:id="@+id/registerTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:fontFamily="sans-serif-medium"
             android:text="Start your journey:"
             android:textAlignment="center"
             android:textSize="24sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/registerButton"
+            app:layout_constraintBottom_toTopOf="@+id/regUsernameText"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias=".5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/homeView"
-            app:layout_constraintVertical_bias="0.395" />
+            app:layout_constraintTop_toBottomOf="@+id/homeView" />
 
         <Button
             android:id="@+id/registerButton"
             android:layout_width="170dp"
             android:layout_height="55dp"
+            android:layout_marginBottom="8dp"
             android:backgroundTint="#648E66"
             android:text="Register"
             android:textSize="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintHorizontal_bias=".5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/homeView"
-            app:layout_constraintVertical_bias="0.635" />
+            app:layout_constraintTop_toBottomOf="@+id/regUsernameText" />
 
         <EditText
             android:id="@+id/regUsernameText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:ems="10"
             android:hint="Create a username"
             android:inputType="text"
             android:textColor="#638D65"
             android:textSize="20sp"
             android:textStyle="italic"
-            app:layout_constraintBottom_toBottomOf="@+id/loginTextView"
+            app:layout_constraintBottom_toTopOf="@+id/registerButton"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/registerTextView" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
