--- a/app/src/main/res/layout/fragment_habit_list.xml
+++ b/app/src/main/res/layout/fragment_habit_list.xml
@@ -18,5 +18,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/habitRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:nestedScrollingEnabled="true"/>
 </LinearLayout>
