--- a/app/src/main/res/layout/item_inventory_category.xml
+++ b/app/src/main/res/layout/item_inventory_category.xml
@@ -49,6 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="You have no items in this category."
+        android:textSize="18sp"
         android:textColor="@android:color/darker_gray"
         android:visibility="gone"
         android:layout_marginStart="16dp"
